[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/default_fnt.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://resources/title_fnt.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/click.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.392157, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.392157, 0, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=4]
/colors/background = Color( 0.984314, 0.745098, 0.027451, 1 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 135
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://resources/title_fnt.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 9 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="SinglePlayerButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 336.0
margin_right = 672.0
margin_bottom = 432.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "SINGLE PLAY"

[node name="ExitButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 448.0
margin_right = 672.0
margin_bottom = 544.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="Title" type="Label" parent="."]
margin_left = 248.0
margin_top = 120.0
margin_right = 588.0
margin_bottom = 267.0
custom_colors/font_color = Color( 1, 0.392157, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Snake"

[node name="version" type="Label" parent="."]
margin_left = 384.0
margin_top = 584.0
margin_right = 453.0
margin_bottom = 610.0
custom_fonts/font = SubResource( 8 )
text = "v0.3.0"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="mouse_entered" from="SinglePlayerButton" to="." method="_on_SinglePlayerButton_mouse_entered"]
[connection signal="pressed" from="SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
